--- a/some exemples/page.css
+++ b/some exemples/page.css
@@ -55,17 +55,13 @@ ol {
     margin-left: 2rem;
 }
 
-iframe {
-    width: 100%;
-    height: 0;
-    padding-bottom: 56.25%;
-    position: relative;
-}
+@media (max-width: 600px) {
+    header {
+        flex-direction: column;
+    }
 
-iframe iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    nav {
+        margin-top: 1rem;
+    }
+    
 }
