--- a/ppw project/project.css
+++ b/ppw project/project.css
@@ -9,11 +9,9 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 10px;
-    padding-left: 150px;
-    padding-right: 150px;
+    padding: 10px 10% 0  10%;
     height: 57px;
-    width: 100%;
+    width: auto;
     margin: 0;
 }
 
@@ -27,7 +25,8 @@ nav ul {
     margin: 0;
     padding: 0;
     display: flex;
-    font-family: Inknut Antiqua, serif;
+    font-family: Inknut Antiqua;
+    font-style: normal;
 }
 
 nav li {
@@ -64,21 +63,22 @@ nav a {
 }
 .container .text {
     position: absolute;
-    bottom: 40px;
-    left: 180px;
+    bottom: 5%;
+    left: 12%;
     width: auto;
     height: auto;
     color: #fff;
     padding: 0 20px;
     background: linear-gradient(90deg, rgba(14, 14, 14, 0.50) 32.63%, rgba(14, 14, 14, 0.00) 91.38%);
+    margin: 0 auto;
 }
 
 .container .text h2 {
     font-family: Irish Grover;
-    font-size: 60px;
+    font-size: 50px;
     font-style: normal;
     font-weight: 400;
-    line-height: 10px;
+    line-height: 5%;
 }
 
 .container .text p {
@@ -86,5 +86,5 @@ nav a {
     font-size: 30px;
     font-style: italic;
     font-weight: 300;
-    line-height: 10px;
+    line-height: 0;
 }
