--- a/ppw project/project.css
+++ b/ppw project/project.css
@@ -1,8 +1,31 @@
 body {
     margin: 0;
     padding: 0;
+    background-color: #e1e5fc;
 }
-
+.circle {
+position: absolute;
+top: 336px;
+    left: -100px;
+    width: 641px;
+    height: 641px;
+    flex-shrink: 0;
+    border-radius: 641px;
+    background: #0e0e0e;
+    opacity: .3;
+}
+.circle2{
+    position: absolute;
+    top: 1100px;
+    left: 80%;
+    width: 641px;
+    height: 641px;
+    flex-shrink: 0;
+    border-radius: 641px;
+    background: #0e0e0e;
+    opacity: .3;
+}
+/* Header */
 header {
     background-color: #0e0e0e;
     color: #fff;
@@ -13,45 +36,61 @@ header {
     height: 57px;
     width: auto;
     margin: 0;
+    font-family: Inknut Antiqua;
 }
-
-header h1 {
-    margin: 0;
-    font-family: Inknut Antiqua, bold;
-}
-
 nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
     display: flex;
-    font-family: Inknut Antiqua;
+    align-items: flex-end;
     font-style: normal;
+    margin-block: 0;
+    font-size: 18px;
 }
-
-nav li {
-    margin-left: 2rem;
-}
-
 nav a {
+    position: relative;
     color: #fff;
     text-decoration: none;
+    transition: color 0.2s linear;
+    display: flex;
+    padding: 0;
+    margin-left: 2em;
+    
+}
+nav a::after{
+    content: " ";
+    display: block;
+    width: 100%;
+    height:1.5px;
+    background: #B9413E;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1;
+    display: none;
+}
+nav a:hover{
+    color: #B9413E;
+}
+nav a:hover::after{
+    display: block;
 }
 
-.container {
+/* Main img */
+.intro {
     position: relative;
     margin: 0 auto;
+    height: 100vh;    
 }
-
-.container img {
+.intro img {
     display: block;
     margin: 0 auto;
     max-width: 80%;
     height: auto;
     position: relative;
 }
-
-.container::before {
+.intro::before {
     content: "";
     position: absolute;
     top: 0;
@@ -61,9 +100,9 @@ nav a {
     background-color: #0e0e0e;
     z-index: -1;
 }
-.container .text {
+.intro .text {
     position: absolute;
-    bottom: 5%;
+    bottom: 15%;
     left: 12%;
     width: auto;
     height: auto;
@@ -71,20 +110,122 @@ nav a {
     padding: 0 20px;
     background: linear-gradient(90deg, rgba(14, 14, 14, 0.50) 32.63%, rgba(14, 14, 14, 0.00) 91.38%);
     margin: 0 auto;
+    
 }
-
-.container .text h2 {
-    font-family: Irish Grover;
-    font-size: 50px;
-    font-style: normal;
-    font-weight: 400;
+.intro .text h2 {
+    font-family: Irish Grover, sans-serif;
+    font-size: 70px;
+    font-weight: 500;
     line-height: 5%;
 }
-
-.container .text p {
+.intro .text p {
     font-family: Inria Serif;
-    font-size: 30px;
+    font-size: 40px;
     font-style: italic;
     font-weight: 300;
     line-height: 0;
+}
+.intro button {
+    position: absolute;
+    bottom: 0;
+    left: 1050px;
+    width: 80px;
+    height: 80px;
+    color: #0e0e0e;
+    text-align: center;
+    font-family: Inknut Antiqua;
+    font-size: 15px;
+    font-style: normal;
+    background: #e1e5fc;
+    border-radius: 641px;
+    border: none;
+    cursor: pointer;    
+}
+.intro button:hover {
+    background: #B9413E;
+    color: #fff;
+}
+/* About */
+.who{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+.container h2{
+    text-align: center;
+    font-family: Inknut Antiqua;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+.container h1{
+    text-align: center;
+    font-family: Inknut Antiqua;
+    font-size: 34px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 44px;
+    margin-top: 0;
+}
+.who .text{
+    display: flex;
+    justify-content: center;
+    padding: 0 10%;
+    font-family: Inria Serif;
+    font-size: 20px;
+    margin-top: 70px;
+    font-weight: 200;
+    line-height: 30px;
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+.who .text .welcome{
+    width: 400px;
+    flex-shrink: 0;
+    margin-top: 30px;
+    margin-right: 70px;
+    border-top: 1px solid #0e0e0e;
+    padding-top: 35px;
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+.who .text .description {
+    width: 500px;
+    height: auto;
+    flex-shrink: 0;
+    margin-top: 10px;
+}
+.who button{
+    background: var(--0E0E0E, #0E0E0E);
+    color: #fff;
+    border: none;
+    display: flex;
+    flex-shrink: 0;
+    font-family: Inknut Antiqua;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 26px;
+    padding: 10px ;
+    margin-left: 270px;
+    margin-top: 10px;
+    cursor: pointer;
+}
+.who button:hover{
+    background: #B9413E;
+    color: #fff;
+}
+/*Image*/
+.imagine{
+    width: 10%;
+    height: 10%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
+    flex-shrink: 0;
+    
 }
