--- a/ppw project/project.css
+++ b/ppw project/project.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #e1e5fc;
+    background-color: #fff;
     overflow-x: hidden;
 }
 .circle {
