--- a/ppw project/project.css
+++ b/ppw project/project.css
@@ -244,141 +244,158 @@ nav a:hover{
     transition: 0.5s;
 }
 /*Popular music*/
-.music .popular{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-shrink: 0;
-    flex-wrap: nowrap;
-    align-content: flex-start;
-    margin: 100px 15% 0 15%;
+.music{
+    display: grid;
+    grid-template-columns: 3fr 1fr 3fr;
+    grid-template-rows: 1fr 2fr 4fr 4fr 4fr;
+    width: 100%;
+    margin: 60px 5% 0 10%;
+    padding: 0;
 }
-.music .popular h1{
-    font-family: Inknut Antiqua;
+.music .popular{
+    display: grid;
+    grid-row: span 2;
+    grid-column: span 1;
     font-family: Inknut Antiqua;
     font-size: 80px;
     font-style: normal;
     font-weight: 400;
     line-height: 116px;
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-bottom: 0;
+    margin: 60px 0 0 0;
+    padding: 0;
 }
-.music .popular hr {
+.music .popular h1{
+    margin: 0;
+    padding: 0;
+}
+.music .hrr {
+    grid-row: span 1;
+    grid-column: span 1;
     border: none;
     height: 2px;
     background-color: #000;
     width: 15%;
-    margin-top: 65px;
+    margin: 160px 150px;
+    padding: 0 50px;
+
 }
-.music .popular button{
+.music .but{
+    display: grid;
+    grid-row: span 1;
+    grid-column: span 1;
+    margin: 0;
+    padding: 0;
+}
+.music button{
     background: var(--0E0E0E, #0E0E0E);
     height: 50px;
     color: #fff;
     border: none;
-    display: flex;
-    flex-shrink: 0;
     font-family: Inknut Antiqua;
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
     line-height: 26px;
-    padding: 10px;
-    margin-left: 20px;
-    margin-top: 40px;
     cursor: pointer;
+    margin-top: 140px; 
 }
 .music .popular button:hover{
     background: #B9413E;
     color: #fff;
 }
-.video{
-    display: flex;
+.music .img1{
+    display: grid;
+    grid-row: span 2;
+    grid-column: span 2;
+    width: auto;
+    height: auto;
 }
-.video .img1{
-    position: absolute;
-    top: 2100px;
-    left: 10%;
-    display: flex;
-    flex-direction: column;
-}
-.video .img1 img{
-    width: 50%;
+.music .img1 img{
+    width: 100%;
     height: auto;
     border-radius: 10px;
 }
-.video .img2{
-    position: absolute;
-    top: 2000px;
-    left: 650px;
-    display: flex;
-    flex-direction: column;
+.music .img2{
+    display: grid;
+    grid-row: span 2;
+    grid-column: span 1;
+    position: relative;
+    width: auto;
+    height: auto;
 }
-.video .img2 img{
-    width: 80%;
+.music .img2 img{
+    width: 100%;
     height: auto;
     border-radius: 10px;
 }
-.video .img3{
-    position: absolute;
-    top: 2820px;
-    left: 5%;
-    display: flex;
-    flex-direction: column;
+.music .item{
+    grid-row: span 1;
+    grid-column: span 1;
 }
-.video .img3 img{
-    width: 50%;
+.music .img3{
+    display: grid;
+    grid-row: span 2;
+    grid-column: span 1;
+    position: relative;
+    width: auto;
+    height: auto;
+}
+.music .img3 img{
+    width: 100%;
     height: auto;
     border-radius: 10px;
 }
-.video .img4{
-    position: absolute;
-    top: 2550px;
-    left: 850px;
-    display: flex;
-    flex-direction: column;
+.music .img4{
+    display: grid;
+    grid-row: span 1;
+    grid-column: span 2;
+    position: relative;
+    width: auto;
+    height: auto;
 }
-.video .img4 img{
-    width: 80%;
+.music .img4 img{
+    width: 100%;
     height: auto;
     border-radius: 10px;
 }
-.video .text{
+
+.music .text{
     margin:  20px 0;
     padding: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.video .text svg{
+.music .text svg{
     width: 50px;
     height: 50px;
     margin: 0 10px;
     padding: 0;
 
 }
-.video .text svg:hover{
+.music .text svg:hover{
     transform: scale(1.1);
     transition: 0.5s;
 }
 
-.video .img1 .text{
+
+.music .img1 .text{
     width: 50%;
     background: linear-gradient(270deg, rgba(72, 133, 133, 0.69) 16.67%, rgba(72, 133, 133, 0.00) 100%);
 }
-.video .img2 .text{
+.music .img2 .text{
     width: 80%;
     background: linear-gradient(270deg, rgba(72, 133, 133, 0.69) 16.67%, rgba(72, 133, 133, 0.00) 100%);
 }
-.video .img3 .text{
+.music .img3 .text{
     width: 50%;
     background: linear-gradient(270deg, rgba(72, 133, 133, 0.69) 16.67%, rgba(72, 133, 133, 0.00) 100%);
 }
-.video .img4 .text{
+.music .img4 .text{
     width: 80%;
     background: linear-gradient(270deg, rgba(72, 133, 133, 0.69) 16.67%, rgba(72, 133, 133, 0.00) 100%);
 }
-.video .text h1{
+.music .text h1{
     font-family: Inknut Antiqua;
     font-size: 32px;
     font-style: normal;
@@ -387,7 +404,7 @@ nav a:hover{
     margin: 0;
     padding: 0;
 }
-.video .text p{
+.music .text p{
     font-family: Inria Serif;
     font-size: 20px;
     font-style: normal;
