--- a/ppw project/project.css
+++ b/ppw project/project.css
@@ -477,7 +477,7 @@ nav a:hover{
     align-items: center;
     flex-shrink: 0;
     flex-wrap: wrap;
-    margin: 30px 15% 50px 15%;
+    margin: 30px 10% 50px 10%;
 }
 .news h1{
     font-family: Inknut Antiqua;
@@ -490,138 +490,112 @@ nav a:hover{
     margin-bottom: 20px;
     padding-bottom: 0;
 }
-#slider { 
+.grid * {
+    box-sizing: border-box;
+}
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 30px;
+    row-gap: 30px;
+    padding: 20px 10px;
+    margin-bottom: 50px;
+}
+
+.grid-item {
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2), 0 4px 6px rgba(0,0,0,0.2);
+    transition: box-shadow .3s;
+    width: 100%;
+    height: 100%;  
+}
+.grid-item .image {
+    height: 200px;
+    overflow: hidden;
+}
+.grid-item .info {
     position: relative;
-	text-align: center;
-    top: 10px;
+    height: calc(100% - 200px);
+    padding: 16px 14px 80px 14px;
 }
-
-#slider{ 
-	margin: 0 auto;
+.grid-item:hover {
+    box-shadow: 0 4px 12px rgba(0,0,0,0.2), 0 16px 20px rgba(0,0,0,0.2);
 }
-
-#slides article{ 
-	width: 20%;
-	float: left;
+.grid-item .image img  {
+      transition: transform 280ms ease-in-out;
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;    
 }
-
-#slides .image{ 
-	width: 500%;
-	line-height: 0;
+.grid-item:hover .image img  {
+    transform: scale(1.1);
 }
-
-#overflow{ 
-	width: 100%;
-	overflow: hidden;
+.info h2 {
+    font-family: inknut Antiqua, sans-serif;
+    color: #B9413E;
+    font-size: 24px;
+    font-weight: normal;
+    margin: 0;
+    text-align: center;
 }
+.info-text p {
+    font-size: 15px;
+    line-height: 20px;
+    font-family: Inria Serif; 
+    margin-bottom: 10px;
 
-article img{ 
-	width: 100%;
-    filter: blur(5px);
 }
-
-#desktop:checked ~ #slider{ 
-	max-width: 960px; 
+.info-text p:last-child {
+    margin-bottom: 0;
 }
-
-#switch1:checked ~ #controls label:nth-child(5), 
-#switch2:checked ~ #controls label:nth-child(1),
-#switch3:checked ~ #controls label:nth-child(2),
-#switch4:checked ~ #controls label:nth-child(3),
-#switch5:checked ~ #controls label:nth-child(4){
-	background: url('img/prev.png') no-repeat; 
-    float: left;
-	margin: 0 0 0 -84px; 
-	display: block;
-	height: 68px;
-	width: 68px;
+.grid-item .button-wrap {
+    display: block;
+    width: 100%;
+    position: absolute;
+    bottom: 14px;
+    left: 0;
+    text-align: center;
 }
-
-#switch1:checked ~ #controls label:nth-child(2), 
-#switch2:checked ~ #controls label:nth-child(3),
-#switch3:checked ~ #controls label:nth-child(4),
-#switch4:checked ~ #controls label:nth-child(5),
-#switch5:checked ~ #controls label:nth-child(1){
-	background: url('img/next.png') no-repeat; 
-    float: right;
-	margin: 0 -84px 0 0; 
-	display: block;
-	height: 68px;
-	width: 68px;
+.atuin-btn {
+    display: inline-flex;
+    text-decoration: none;
+    position: relative;
+    font-size: 20px;
+    line-height: 20px;
+    padding: 12px 30px;
+    color: #FFF;
+    font-family: Inknut Antiqua;
+    background: #B9413E;
+    cursor: pointer; 
+    border: 2px solid #BFE2FF;
 }
-
-label, a{ 
-	cursor: pointer;
+.atuin-btn:hover,
+.atuin-btn:active,
+.atuin-btn:focus {
+    color: #FFF;
 }
-
-.all input{ 
-	display: none;
+.atuin-btn:after,
+.atuin-btn:before {
+    position: absolute;
+    height: 4px;
+    left: 50%;
+    background: #B9413E;
+    bottom: -6px;
+    content: "";
+    transition: all 280ms ease-in-out;
+    width: 0;
 }
-
-#switch1:checked ~ #slides .image{
-	margin-left: 0;
+.atuin-btn:before {
+    top: -6px;
 }
-
-#switch2:checked ~ #slides .image{
-	margin-left: -100%;
-}
-
-#switch3:checked ~ #slides .image{
-	margin-left: -200%;
-}
-
-#switch4:checked ~ #slides .image{
-	margin-left: -300%;
-}
-
-#switch5:checked ~ #slides .image{
-	margin-left: -400%;
-}
-
-#controls{ 
-	margin: -25% 0 0 0;
-	width: 100%;
-	height: 50px;
-}
-
-#active label{ 
-	border-radius: 10px; 
-	display: inline-block; 
-	width: 15px;
-	height: 15px;
-	background: #bbb;
-	margin: 0 5px;
-}
-
-#active{ 
-	margin: 23% 0 0;
-	text-align: center;
-}
-
-#active label:hover{
-	background: #B9413E;
-	border-color: #777 !important; 
-}
-
-#switch1:checked ~ #active label:nth-child(1),
-#switch2:checked ~ #active label:nth-child(2),
-#switch3:checked ~ #active label:nth-child(3),
-#switch4:checked ~ #active label:nth-child(4),
-#switch5:checked ~ #active label:nth-child(5){
-	background: #0e0e0e;
-	border-color: #18a3dd !important;
-}
-
-#slides .image{ 
-	transition: all 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
-}
-
-#controls label:hover{ 
-	opacity: 0.6;
-}
-
-#controls label{ 
-	transition: opacity 0.2s ease-out;
+.atuin-btn:hover:after,
+.atuin-btn:hover:before,
+.atuin-btn:active:after,
+.atuin-btn:active:before,
+.atuin-btn:focus:after,
+.atuin-btn:focus:before {
+    width: 100%;
+    left: 0;
 }
 /*Footer*/
 footer{
@@ -707,4 +681,23 @@ footer .text p{
     width: 100%;
     height: 0;
     border: 5px solid #B9413E;
+}
+
+
+
+/* Кол-во блоков на разных экранах */
+@media only screen and (max-width: 1200px) {
+    .grid {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+@media only screen and (max-width: 900px) {
+    .grid {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media only screen and (max-width: 600px) {
+    .grid {
+        grid-template-columns: 1fr;
+    }
 }
